--- a/scripts/R49_all_2_RNAseq_GF.Rmd
+++ b/scripts/R49_all_2_RNAseq_GF.Rmd
@@ -726,70 +726,39 @@ ggsave("../data/R49_bcell_gene_counts_honest_plot.jpg", width = 12, height = 9, 
 ## B cells heatmap   
 
 ```{r}
-# make a heatmap of the above data
-# Filter the count matrix for these genes
-batch_corrected_count_si_col <- batch_corrected_counts
-
-genes_to_plot <- batch_corrected_count_si_col |> 
-  as.data.frame() %>%
-  rownames_to_column('ensembl_version') |> 
-  inner_join(annotated_si_col |> select(ensembl_version, symbol)) |> 
-  filter(symbol %in% b_cell_sig_genes$symbol)
-
-
-heatmap_data <- genes_to_plot |> 
-  select(-ensembl_version) |> 
-  column_to_rownames('symbol') |> 
-  as.matrix()
-
-# 8. Create annotation for the columns (Samples)
-sample_annotation <- meta_table |> filter(tissue == 'small_intestine', water == 'regular_water') |> 
-  select(sample_id, treatment, batch) |> 
-  column_to_rownames('sample_id')
-
-# Get unique values from the annotations to build the color lists
-condition_levels <- unique(sample_annotation$treatment)
-batch_levels <- unique(sample_annotation$batch)
-
-
-# High-contrast colors for treatment/condition
-# Manually assigning for clarity based on the plot
-cond_colors <- c("#E41A1C", "#377EB8") # (Red, Blue)
-names(cond_colors) <- condition_levels
-
-# Contrasting colors for batch
-batch_colors <- c("#FDBF6F", "#A6CEE3") # (Light Orange, Light Blue)
-names(batch_colors) <- batch_levels[1:length(batch_colors)]
-
-# Combine into the final list for pheatmap
-ann_colors <- list(
-  treatment = cond_colors,
-  batch = batch_colors
+# 1. Define the list of genes from your volcano plot
+si_b_cell_genes <- list(
+  "B cell signature Genes" = c(
+    "Hvcn1", "Wdfy4", "Cd22", "Ltb", "Fcer2a", "Cd79b",
+    "Cd19", "Ms4a1", "Cd79a", "H2-Ob"
+  )
 )
 
-# 9. Generate the heatmap
-Bcell_heatmap <- pheatmap(
-  heatmap_data,
-  # Annotation for columns (samples) and rows (genes)
-  annotation_col = sample_annotation,
-  # Pass the custom colors
-  annotation_colors = ann_colors,
-  # Scale data by row (Z-score)
-  scale = "row",
-  
-  # Clustering settings
-  cluster_rows = T, # We already sorted by function
-  cluster_cols = TRUE,
-  
-  # Aesthetics
-  show_rownames = TRUE,
-  show_colnames = T,
-  border_color = "grey60",
-  fontsize_row = 8,
-  main = "Heatmap of B cell signature genes (SI Colonization)",
-  filename = "../data/R49_Bcell_heatmap.jpg", width = 8, height = 8
+# 2. Run the SI "Colonization" analysis
+# This function already filters for batch1 and target_tissue = "small_intestine"
+si_colonization_output <- run_deseq_with_batch_correction(
+  full_counts = filtered_raw_counts_matrix,
+  full_meta = meta_table,
+  target_tissue = "small_intestine", # <-- Set to SI
+  analysis_type = "Colonization"
 )
 
+# 3. Define the file path
+si_col_filepath <- "../data/R49_SI_Colonization_bcell_Heatmap.jpg"
+
+# 4. Plot the heatmap
+# The 'dds' object only contains batch 1 data, so no batch correction is needed/done
+# Columns will be sorted by "treatment" (PBS vs E. faecalis)
+plot_pathway_heatmap(
+  dds = si_colonization_output$dds,
+  gene_list = si_b_cell_genes,       # <-- Use the new gene list
+  annotation_vars = c("treatment"),
+  main_title = "SI Colonization Effect (Batch 1)",
+  cluster_cols = FALSE,
+  save_to_file = si_col_filepath,
+  plot_width = 5,
+  plot_height = 5 # Adjusted height for this number of genes
+)
 ```
 
 # GSEA
@@ -939,7 +908,7 @@ final_plot <- (plot_si_col | plot_li_col) / (plot_si_suc | plot_li_suc) +
   )
 
 # --- Save and Display the Final Plot ---
-ggsave("../data/R49_gsea_hallmark_grid.jpg", final_plot, width = 18, height = 14, dpi = 300)
+ggsave("../data/R49_gsea_hallmark_grid.jpg", final_plot, width = 12, height = 8, dpi = 300)
 print(final_plot)
 
 # what the SI gsea and the volcano shows 
@@ -1449,20 +1418,24 @@ if (length(inflammation_genes_for_heatmap) > 0) {
 ```
 
 
-# LI what is happening in LI
+# LI happening in LI
 
 E. faecalis alone causes inflammation and tells the gut cells to stop growing. Adding sucrose keeps the inflammation going but reverses the stop signal, telling the gut cells to grow rapidly, creating a high-risk, inflamed, and proliferative environment. The sucrose isn't directly affecting the host cells in the large intestine. Instead, a high-sucrose diet feeds the E. faecalis (which shouldn't have access to that sugar), causing it to produce byproducts like lactic acid and form biofilms. The host cells are reacting to this new, acidic, and bacteria-rich environment.
 
+## heatmap function 
+
 ```{r}
 # need to correct for batch effects in the sucrose contrast
-plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, cluster_cols = FALSE) {
+plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, 
+                               cluster_cols = FALSE, save_to_file = NULL,
+                               plot_width = 7, plot_height = 7) {
   
   # Run VST on the dds object
   # blind = FALSE uses the model's dispersion estimates.
   vst_data <- vst(dds, blind = FALSE)
   vst_matrix <- assay(vst_data)
   
-  # --- NEW: Check for and remove batch effect ---
+  # --- Check for and remove batch effect ---
   # Check if 'batch' is part of the design formula
   if ("batch" %in% all.vars(design(dds))) {
     
@@ -1505,7 +1478,7 @@ plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, cl
     }
     message("Batch effect removed.")
   }
-  # --- END NEW SECTION ---
+  # --- END BATCH CORRECTION ---
   
   # Get all genes from the list
   genes_to_plot <- unlist(gene_list)
@@ -1530,7 +1503,7 @@ plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, cl
   # Get metadata for annotation
   annotation_col <- as.data.frame(colData(vst_data)[, annotation_vars, drop = FALSE])
   
-  # --- NEW: Manually sort columns if cluster_cols is FALSE ---
+  # --- Manually sort columns if cluster_cols is FALSE ---
   ordering_indices <- 1:ncol(plot_matrix) # Default order (as is)
   
   if (cluster_cols == FALSE && length(annotation_vars) > 0) {
@@ -1551,6 +1524,7 @@ plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, cl
   plot_matrix <- plot_matrix[, ordering_indices, drop = FALSE]
   annotation_col <- annotation_col[ordering_indices, , drop = FALSE]
   # --- END NEW SORTING LOGIC ---
+  
   
   # Create row annotations and gaps
   # Create a vector of pathway names, repeated for each gene
@@ -1575,21 +1549,47 @@ plot_pathway_heatmap <- function(dds, gene_list, annotation_vars, main_title, cl
   # Set colors
   heatmap_colors <- colorRampPalette(rev(brewer.pal(n = 7, name = "RdYlBu")))(100)
   
-  # Plot the heatmap
-  pheatmap(
-    plot_matrix,
+  # --- Prepare arguments for saving file ---
+  if (!is.null(save_to_file)) {
+    # Ensure the directory exists
+    dir.create(dirname(save_to_file), showWarnings = FALSE, recursive = TRUE)
+    message("Saving heatmap to ", save_to_file, 
+            " (", plot_width, "w x ", plot_height, "h)")
+    
+    save_args <- list(
+      filename = save_to_file,
+      width = plot_width, # Use user-defined width
+      height = plot_height # Use user-defined height
+    )
+  } else {
+    # pheatmap's default is NA, which plots to screen
+    save_args <- list(
+      filename = NA
+    )
+  }
+
+  # --- Plot the heatmap ---
+  # Create list of arguments
+  pheatmap_args <- list(
+    mat = plot_matrix, # Now sorted
     color = heatmap_colors,
-    annotation_col = annotation_col,
+    annotation_col = annotation_col, # Now sorted
     annotation_row = annotation_row_df,
     cluster_rows = FALSE,  # Keep pathway groups together
-    cluster_cols = cluster_cols, # Allow clustering or keep sample groups
+    cluster_cols = FALSE,  # Must be FALSE to respect manual sort
     show_colnames = FALSE, # Tidy up the plot
     show_rownames = TRUE,
     gaps_row = gaps_row,
     scale = "row",         # Scale by gene (Z-score), this is KEY
     main = main_title
   )
-} 
+  
+  # Add the file saving arguments
+  pheatmap_args <- c(pheatmap_args, save_args)
+  
+  # Call pheatmap with the combined list of arguments
+  do.call(pheatmap, pheatmap_args)
+}
 ```
 
 
@@ -1703,25 +1703,42 @@ my_gene_list <- create_heatmap_genelist_from_gsea(
 )
 ```
 
+## LI two contrast heatmap 
+
 ```{r}
 # 3. Plot Heatmap 1: Colonization
+col_filepath <- "../data/R49_LI_Colonization_Heatmap.jpg"
+
+# Plot heatmap and save to file
 plot_pathway_heatmap(
   dds = colonization_output$dds,
   gene_list = my_gene_list,
   annotation_vars = c("treatment"),
-  main_title = "Colonization Effect (Batch 1 Only)"
+  main_title = "LI Colonization Effect (Batch 1)",
+  cluster_cols = FALSE,
+  save_to_file = col_filepath, # <-- PASS THE FILE PATH
+  plot_width = 5,              # <-- DEFINE WIDTH
+  plot_height = 10            # <-- DEFINE HEIGHT
 )
+```
 
+
+```{r}
 # # --- Sucrose Heatmap (Both Batches, Corrected) ---
 
-# Plot heatmap
-# 'dds' object has ~ batch + water, so batch correction is APPLIED
+# # Define file path
+suc_filepath <- "../data/R49_LI_Sucrose_Heatmap.jpg"
+
+# Plot heatmap and save to file
 plot_pathway_heatmap(
   dds = sucrose_output$dds,
   gene_list = my_gene_list,
-  annotation_vars = c( "water", "batch"),
+  annotation_vars = c("water", "batch"),
   main_title = "LI Sucrose Effect (Batch Corrected)",
-  cluster_cols = F
+  cluster_cols = FALSE,
+  save_to_file = suc_filepath ,
+  plot_width = 7,       
+  plot_height = 10  
 )
 ```
 
